// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailedBuildCard matches snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main failedBuildCard"
  >
    <div
      class="Avatar--Avatar Avatar--contentStyle"
    >
      <span
        class="bp3-popover-wrapper Avatar--avatarPopOver"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="Avatar--AvatarInner"
            style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            JD
          </div>
        </span>
      </span>
    </div>
    <div
      class="StyledProps--font StyledProps--main titleAndMessage"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
        style="--text-line-clamp: 1;"
      >
        Test-Pipeline1
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
        style="--text-line-clamp: 1;"
      >
        Fix image secrets in OSS version, a long msg
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main times StyledProps--margin-bottom-medium"
      >
        6 hours ago
        <span
          class="bp3-icon bp3-icon-time StyledProps--main timeIcon"
          icon="time"
        >
          <svg
            data-icon="time"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              time
            </desc>
            <path
              d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        5m
      </div>
      <div
        class="StyledProps--font StyledProps--main branchAndCommitWrap"
      >
        <div
          class="linkWrap"
        >
          <span
            class="bp3-icon bp3-icon-git-branch StyledProps--main"
            icon="git-branch"
          >
            <svg
              data-icon="git-branch"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                git-branch
              </desc>
              <path
                d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <a>
            Master
          </a>
        </div>
        <div
          class="linkWrap"
        >
          <span
            class="bp3-icon bp3-icon-git-commit StyledProps--main"
            icon="git-commit"
          >
            <svg
              data-icon="git-commit"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                git-commit
              </desc>
              <path
                d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <a>
            123sdf2
          </a>
        </div>
      </div>
    </div>
    <div
      class="leftBorder"
    />
  </div>
</div>
`;

exports[`FailedBuildCard matches snapshot when commitId is long 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main failedBuildCard"
  >
    <div
      class="Avatar--Avatar Avatar--contentStyle"
    >
      <span
        class="bp3-popover-wrapper Avatar--avatarPopOver"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="Avatar--AvatarInner"
            style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            JD
          </div>
        </span>
      </span>
    </div>
    <div
      class="StyledProps--font StyledProps--main titleAndMessage"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
        style="--text-line-clamp: 1;"
      >
        Test-Pipeline1
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
        style="--text-line-clamp: 1;"
      >
        Fix image secrets in OSS version, a long msg
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main times StyledProps--margin-bottom-medium"
      >
        6 hours ago
        <span
          class="bp3-icon bp3-icon-time StyledProps--main timeIcon"
          icon="time"
        >
          <svg
            data-icon="time"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              time
            </desc>
            <path
              d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        5m
      </div>
      <div
        class="StyledProps--font StyledProps--main branchAndCommitWrap"
      >
        <div
          class="linkWrap"
        >
          <span
            class="bp3-icon bp3-icon-git-branch StyledProps--main"
            icon="git-branch"
          >
            <svg
              data-icon="git-branch"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                git-branch
              </desc>
              <path
                d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <a>
            Master
          </a>
        </div>
        <div
          class="linkWrap"
        >
          <span
            class="bp3-icon bp3-icon-git-commit StyledProps--main"
            icon="git-commit"
          >
            <svg
              data-icon="git-commit"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                git-commit
              </desc>
              <path
                d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <a>
            3123123
          </a>
        </div>
      </div>
    </div>
    <div
      class="leftBorder"
    />
  </div>
</div>
`;
